--- a/Gabay-Final-V2/Web.config
+++ b/Gabay-Final-V2/Web.config
@@ -23,7 +23,8 @@
 	</compilers>
   </system.codedom>
 	<connectionStrings>
-		<add name="Gabaydb" connectionString="Data Source=LAPTOP-35UJ0LOL\SQLEXPRESS;Initial Catalog=gabaydb_v.1.8;Integrated Security=True" providerName="System.Data.SqlClient" />
+		<!--<add name="Gabaydb" connectionString="Data Source=DESKTOP-6DAE04O\SQLEXPRESS;Initial Catalog=gabaydb_v.1.8;Integrated Security=True" providerName="System.Data.SqlClient" />-->
+		<add name="Gabaydb" connectionString="Data Source=LAPTOP-35UJ0LOL\SQLEXPRESS;Initial Catalog=gabaydb_v.1.9;Integrated Security=True" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 	<appSettings>
 		<add key="webpages:Version" value="3.0.0.0" />
@@ -43,10 +44,6 @@
 		<dependentAssembly>
 			<assemblyIdentity name="System.Formats.Asn1" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
 			<bindingRedirect oldVersion="0.0.0.0-8.0.0.0" newVersion="8.0.0.0" />
-		</dependentAssembly>
-		<dependentAssembly>
-			<assemblyIdentity name="System.Memory" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
-			<bindingRedirect oldVersion="0.0.0.0-4.0.1.2" newVersion="4.0.1.2" />
 		</dependentAssembly>
 	</assemblyBinding>
   </runtime>
